--- a/style.css
+++ b/style.css
@@ -53,3 +53,19 @@ body {
 .comment-text {
     line-height: 16px;
 }
+
+.comment-area-label {
+    font-weight: bold;
+}
+
+.comment-area {
+    display: block;
+    width: 100%;
+    height: 100px;
+    margin: 10px 0;
+}
+
+.comment-submit {
+    float: right;
+    font-size: 16px;
+}
